@@ -1,0 +1,9 @@
+// SPDX-FileCopyrightText: 2025 Shun Sakai
+//
+// SPDX-License-Identifier: Apache-2.0 OR MIT
+
+= Examples
+
+link:output.rs[]::
+
+  An example of generating random bytes.
